# 2026-03-30-Tadashi

./: .gitignore  README.md  docker-compose.yml  env.local.json  pyproject.toml  samconfig.toml  template.yaml
app/: Dockerfile  main.py  pyproject.toml
lambda/: Dockerfile  app.py  pyproject.toml
models/: convert_to_onnx.py
onnx/: weight.onnx
s3/: upload_model.py
